@@ -1,3 +1,9 @@
+2007-01-31  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-network-preferences.c: (cb_remove_url),
+	(cb_dialog_response), (cb_use_same_proxy_checkbutton_clicked),
+	(main): plug memory leaks (fixes bug #395609)
+
 2007-01-29  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* gnome-network-preferences.c: (create_listmodel):
